--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"express": "^4.16.3",
 		"kafka-node": "^3.0.1",
-		"socket.io": "^2.1.1"
+		"socket.io": "^2.1.1",
+		"websocket": "^1.0.28"
 	}
 }
