--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"description": "my first socket.io app",
 	"dependencies": {
+		"cookies": "^0.7.2",
 		"express": "^4.16.3",
 		"kafka-node": "^3.0.1",
 		"socket.io": "^2.1.1",
