--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "body-parser": "^1.19.0",
     "connect": "^3.7.0",
     "content-disposition": "^0.5.3",
+    "cookie-parser": "^1.4.4",
     "cookies": "^0.7.3",
     "engine.io": "^3.3.2",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "finalhandler": "^1.1.2",
     "kafka-node": "^3.0.1",
     "pg": "^7.12.0",
