--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "connect": "^3.7.0",
     "content-disposition": "^0.5.3",
     "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "cookies": "^0.7.3",
     "engine.io": "^3.3.2",
     "express": "^4.17.1",
